# translate_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.ps1  start.sh
backend/: agents.py  nodes.py  states.py  utils.py
templates/: index.html
